--- a/client/imports/app/login/components/login.window/login.window.view.html
+++ b/client/imports/app/login/components/login.window/login.window.view.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+    <span>Testas</span>
     <form class="form-signin">
         <input type="text" class="form-control" name="username" placeholder="El. paštas" [(ngModel)]="credentials.email" autofocus="" />
         <input type="password" class="form-control" name="password" placeholder="Slaptažodis" [(ngModel)]="credentials.password"/>
