fixex bootstrap styles

--- a/client/imports/app/admin/admin.route.edit/components/route.details/route.details.view.html
+++ b/client/imports/app/admin/admin.route.edit/components/route.details/route.details.view.html
@@ -14,7 +14,7 @@
 
 	<div class="form-group">
 		<label>Žemėlapio ikona</label><br>
-		<div class="btn-group" dropdown container="body">
+		<div class="btn-group" dropdown>
                   <button dropdownToggle type="button" class="btn btn-secondary dropdownToggle">
                         <span *ngIf="form.value.main_icon">
                                 <img
